# Angora

./: Dockerfile
common/src/: config.rs  dfg_shm.rs  lib.rs  shm.rs
fuzzer/: Cargo.toml  core
fuzzer/src/: fuzz_loop.rs  fuzz_main.rs
fuzzer/src/executor/: executor.rs
llvm_mode/compiler/: angora_clang.c
llvm_mode/libcxx/: CMakeLists.txt  afl-llvm-rt.o.c
llvm_mode/pass/: CMakeLists.txt  DaflPass.cc
tests/: run_fuzz.sh  run_objdump-2018-17360.sh
